--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="icon" type="image/svg+xml" href="{% static 'css/images/favicon.svg' %}">
     <title>Ecommerce</title>
+    
 
     <script type="text/javascript">
         let user = '{{ request.user|escapejs }}';
@@ -44,7 +45,6 @@
             <a href="{% url 'profile' %}" class="nav-item">Profile</a>
         {% else %}
             <a href="{% url 'login' %}" class="nav-item">Login</a>
-            <a href="{% url 'register' %}" class="nav-item">Register</a>
         {% endif %}
 
         <div class="cart-container">
@@ -63,6 +63,15 @@
 </nav>
 
 <div class="main-content">
+    {% if messages %}
+        <div class="messages-container">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
     {% block content %}
     {% endblock content %}
 </div>
